--- a/module/package.json
+++ b/module/package.json
@@ -1,12 +1,10 @@
 {
   "name": "@sewatech/bespoke-course",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "bin": {
     "print-slides": "./scripts/print.js"
   },
   "dependencies": {
-    "commander": "^2.20.0",
-    "roboto-fontface": "^0.6.0",
     "bespoke": "^1.1.0",
     "bespoke-bullets": "^1.1.0",
     "bespoke-classes": "^1.0.0",
@@ -16,7 +14,9 @@
     "bespoke-overview": "^1.0.4",
     "browserify": "^13.0.0",
     "cheerio": "^1.0.0-rc.2",
+    "commander": "^2.20.0",
     "del": "^2.2.0",
+    "fancy-log": "^1.3.3",
     "font-awesome": "^4.7.0",
     "gh-pages": "^0.11.0",
     "gulp-autoprefixer": "3.1.0",
@@ -36,6 +36,7 @@
     "normalizecss": "^3.0.0",
     "npm": "^6.5.0",
     "puppeteer": "^1.3.0",
+    "roboto-fontface": "^0.6.0",
     "through": "^2.3.4",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
