--- a/sample/package.json
+++ b/sample/package.json
@@ -11,9 +11,9 @@
     "ratio": "4:3"
   },
   "dependencies": {
-    "@sewatech/bespoke-course": "^0.2.5"
+    "@sewatech/bespoke-course": "^0.3.0"
   },
   "devDependencies": {
-    "gulp": "^3.9.1"
+    "gulp": "4.x"
   }
 }
