--- a/module/package.json
+++ b/module/package.json
@@ -3,8 +3,8 @@
   "version": "0.4.0",
   "homepage": "https://github.com/Sewatech/bespoke-course/tree/master/module",
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/Sewatech/bespoke-course"
+    "type": "git",
+    "url": "https://github.com/Sewatech/bespoke-course"
   },
   "bin": {
     "print-slides": "./scripts/print.js"
@@ -19,6 +19,7 @@
     "del": "^5.1.0",
     "fancy-log": "^1.3.3",
     "font-awesome": "^4.7.0",
+    "gulp": "4.x",
     "gulp-autoprefixer": "7.0.1",
     "gulp-chmod": "^3.0.0",
     "gulp-clean-css": "^4.2.0",
@@ -37,8 +38,5 @@
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
     "yargs": "^14.2.0"
-  },
-  "devDependencies": {
-    "gulp": "4.x"
   }
 }
